<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/applabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/apkname"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/package_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/applabel"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/package_name"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/package_name"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/version_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_name"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/version_code"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/openAppBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/open_app" />


</RelativeLayout>